--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div class="leftLine"></div>
             <ul class="content ry">
 
-                        <li class="item clearfix">姓名 ：XXX</li>
-                        <li class="item clearfix">身份证号 ：XXXXXXXXXXXXXXXXXX</li>
-                        <li class="item clearfix">证书编号 ：XXX(XXXX)XXXXXXXX</li>
-                        <li class="item clearfix">企业名称 ：XXXXXXXXXXXXXXXX</li>
+                        <li class="item clearfix">姓名 ：XXXX</li>
+                        <li class="item clearfix">身份证号 ：XXXXXXXXX</li>
+                        <li class="item clearfix">证书编号 ：冀建安B(2017)0025241</li>
+                        <li class="item clearfix">企业名称 ：衡水亚东水电工程有限公司</li>
                         <li class="item clearfix">有效期至 ：XXXX年XX月XX日</li>
                         <li class="item syj clearfix">使用期限 ：XXXX年XX月XX日至XXXX年XX月XX日</li>
                         <li class="item syj clearfix">本使用件仅用于 ：投标</li>
