--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li class="item clearfix">证书编号 ：冀建安B(2017)0025241</li>
                         <li class="item clearfix">企业名称 ：衡水亚东水电工程有限公司</li>
                         <li class="item clearfix">有效期至 ：XXXX年XX月XX日</li>
-                        <li class="item syj clearfix">使用期限 ：XXXX年XX月XX日至XXXX年XX月XX日</li>
+                        <li class="item syj clearfix">使用期限 ：2020年7月11日至2020年8月31日</li>
                         <li class="item syj clearfix">本使用件仅用于 ：投标</li>
                 <li class="item fzjg clearfix">
                     发证单位：河北省住房和城乡建设厅
